--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,16 @@ before_install:
 
 script:
   - docker run -e CI=true bapic/docker-reactapp1 npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-south-1"
+  app: "docker-reactapp1"
+  env: "DockerReactapp1-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-821851716244"
+  bucket_pah: "docker-reactapp1"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
