--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   provider: elasticbeanstalk
   region: "ap-south-1"
   app: "docker-reactapp1"
-  env: "DockerReactapp1-env"
+  env: "DockerReactapp1-env1"
   bucket_name: "elasticbeanstalk-ap-south-1-821851716244"
   bucket_pah: "docker-reactapp1"
   on:
