--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,17 @@ before_install:
   #   - docker run USERNAME/docker-react npm run test -- --coverage
 script:
   - docker run -e CI=true bapic/docker-reactapp1 npm run test
+
 deploy:
   provider: elasticbeanstalk
-  region: "ap-south-1"
-  app: "docker-reactapp1"
-  env: "DockerReactapp1-env1"
-  bucket_name: "elasticbeanstalk-ap-south-1-821851716244"
-  bucket_pah: "docker-reactapp1"
+  region: ap-south-1
+  app: docker-reactapp1
+  env: DockerReactapp1-env1
+  bucket_name: elasticbeanstalk-ap-south-1-821851716244
+  bucket_pah: docker-reactapp1
+  
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
